# LearnOpenCV

./: CMakeLists.txt  README.md
src/5_2/: CMakeLists.txt  main.cpp
src/5_3/: CMakeLists.txt  main.cpp
src/5_4/: CMakeLists.txt  main.cpp
src/5_5/: CMakeLists.txt  main.cpp
src/5_6/: CMakeLists.txt  main.cpp
src/6_1/: CMakeLists.txt  main.cpp
src/6_2/: CMakeLists.txt  main.cpp
src/6_3/: CMakeLists.txt  main.cpp
src/6_4/: CMakeLists.txt  main.cpp
src/6_5/: CMakeLists.txt  main.cpp
src/6_7/: CMakeLists.txt  main.cpp
src/7_1/: CMakeLists.txt  main.cpp
src/7_1_canny/: CMakeLists.txt  main.cpp
src/7_1_laplacian/: CMakeLists.txt  main.cpp
src/7_1_scharr/: CMakeLists.txt  main.cpp
src/7_1_sobel/: CMakeLists.txt  main.cpp
